Modif OO Diaporama + Map

--- a/index.htm
+++ b/index.htm
@@ -74,10 +74,14 @@
         <section id="reservation_infos" class="border"></section>
     </div>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
+    
     <script src="js/ajax.js"></script>
+    <script src="js/config.js"></script>
+    <script src="js/map.js"></script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
+    <script src="js/diaporama.js"></script>
     <script src="js/slider.js"></script>
-    <script src="js/maps.js"></script>
+    <!-- <script src="js/marker.js"></script> -->
     <script src="js/canvas.js"></script>
     <script src="js/reservation.js"></script>
     <script src="js/station.js"></script>
