Fonctionnement map + marker/cluster

--- a/index.htm
+++ b/index.htm
@@ -79,11 +79,11 @@
     <script src="js/config.js"></script>
     <script src="js/map.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
-    <script src="js/diaporama.js"></script>
-    <script src="js/slider.js"></script>
+    <!-- <script src="js/diaporama.js"></script> -->
+    <!-- <script src="js/slider.js"></script> -->
     <!-- <script src="js/marker.js"></script> -->
-    <script src="js/canvas.js"></script>
-    <script src="js/reservation.js"></script>
+    <!-- <script src="js/canvas.js"></script>
+    <script src="js/reservation.js"></script> -->
     <script src="js/station.js"></script>
 </body>
 
