--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" type="image/ico" href="img/logo_ico.png" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>VeloCity</title>
 </head>
 
@@ -73,18 +74,22 @@
         </section>
         <section id="reservation_infos" class="border"></section>
     </div>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
-    
+    <script
+        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script>
+
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
     <script src="js/map.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
-    <!-- <script src="js/diaporama.js"></script> -->
-    <!-- <script src="js/slider.js"></script> -->
-    <!-- <script src="js/marker.js"></script> -->
-    <!-- <script src="js/canvas.js"></script>
-    <script src="js/reservation.js"></script> -->
     <script src="js/station.js"></script>
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap">
+    </script>
+    <!-- <script src="js/diaporama.js"></script> -->
+    <script src="js/canvas.js"></script>
+    <script src="js/reservation.js"></script>
+    <script src="js/booking.js"></script>
+
 </body>
 
 </html>
