--- a/index.htm
+++ b/index.htm
@@ -76,13 +76,13 @@
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
-    <!-- <script src="js/map.js"></script>
-    <script src="js/station.js"></script> -->
+    <script src="js/map.js"></script>
+    <script src="js/station.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
     <script src="js/diaporama.js"></script>
-    <!-- <script src="js/canvas.js"></script>
+    <script src="js/canvas.js"></script>
     <script src="js/reservation.js"></script>
-    <script src="js/booking.js"></script> -->
+    <script src="js/booking.js"></script>
 
 </body>
 
