Suppression fichiers inutiles

--- a/index.htm
+++ b/index.htm
@@ -31,7 +31,7 @@
                 <div id="slider_btn-right"><i class="fas fa-arrow-right"></i></div>
             </div>
         </section>
-        <!-- <section id="mapstation">
+        <section id="mapstation">
             <div id="map"></div>
             <div id="station_canvas" class="border">
                 <div id="station_close"><i class="fas fa-times"></i></div>
@@ -71,7 +71,7 @@
                 </div>
             </div>
         </section>
-        <section id="reservation_infos" class="border"></section> -->
+        <section id="reservation_infos" class="border"></section>
     </div>
     <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
     <script src="js/ajax.js"></script>
