--- a/index.htm
+++ b/index.htm
@@ -20,7 +20,7 @@
         </nav>
     </header>
     <div id="container">
-        <section id="slider" class="border">
+        <!-- <section id="slider" class="border">
             <div id="slider_diapo">
                 <div id="slider_img"></div>
                 <div id="slider_txt"></div>
@@ -30,7 +30,7 @@
                 <div id="slider_btn-pause"><i class="fas fa-pause"></i></div>
                 <div id="slider_btn-right"><i class="fas fa-arrow-right"></i></div>
             </div>
-        </section>
+        </section> -->
         <section id="mapstation">
             <div id="map"></div>
             <div id="station_canvas" class="border">
@@ -77,9 +77,10 @@
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
     <script src="js/map.js"></script>
+    <script src="js/mapmanager.js"></script>
     <script src="js/station.js"></script>
     <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
-    <script src="js/diaporama.js"></script>
+    <!-- <script src="js/diaporama.js"></script> -->
     <script src="js/canvas.js"></script>
     <script src="js/reservation.js"></script>
     <script src="js/booking.js"></script>
