--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,8 @@
     <link rel="shortcut icon" type="image/ico" href="img/logo_ico.png" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
+        integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>VeloCity</title>
 </head>
 
@@ -20,7 +21,7 @@
         </nav>
     </header>
     <div id="container">
-        <!-- <section id="slider" class="border">
+        <section id="slider" class="border">
             <div id="slider_diapo">
                 <div id="slider_img"></div>
                 <div id="slider_txt"></div>
@@ -30,7 +31,7 @@
                 <div id="slider_btn-pause"><i class="fas fa-pause"></i></div>
                 <div id="slider_btn-right"><i class="fas fa-arrow-right"></i></div>
             </div>
-        </section> -->
+        </section>
         <section id="mapstation">
             <div id="map"></div>
             <div id="station_canvas" class="border">
@@ -73,14 +74,18 @@
         </section>
         <section id="reservation_infos" class="border"></section>
     </div>
-    <script src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js"></script>
+    <script
+        src="https://developers.google.com/maps/documentation/javascript/examples/markerclusterer/markerclusterer.js">
+    </script>
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
     <script src="js/map.js"></script>
     <script src="js/mapmanager.js"></script>
     <script src="js/station.js"></script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap"></script>
-    <!-- <script src="js/diaporama.js"></script> -->
+    <script async defer
+        src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap">
+    </script>
+    <script src="js/diaporama.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/reservation.js"></script>
     <script src="js/booking.js"></script>
