Add displaymenu + CSS

--- a/index.htm
+++ b/index.htm
@@ -16,8 +16,8 @@
     <header>
         <img src="img/logo.png" alt="logo" id="logo" />
         <nav id="menu">
-            <div id="menu_aide"><a>Aide</a></div>
             <div id="menu_reservation"><a>Réservation</a></div>
+            <div id="menu_aide"><a>Aide</a></div>
         </nav>
     </header>
     <div id="container">
@@ -79,6 +79,7 @@
     </script>
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
+    <script src="js/displaymenu.js"></script>
     <script src="js/map.js"></script>
     <script src="js/mapmanager.js"></script>
     <script src="js/station.js"></script>
