Modif canvas / Add app.js

--- a/index.htm
+++ b/index.htm
@@ -80,16 +80,16 @@
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
     <script src="js/displaymenu.js"></script>
-    <script src="js/map.js"></script>
+    <script src="js/diaporama.js"></script>
+    <script src="js/canvas.js"></script>
+    <script src="js/reservation.js"></script>
+    <script src="js/booking.js"></script>
+    <script src="js/app.js"></script>
     <script src="js/mapmanager.js"></script>
     <script src="js/station.js"></script>
     <script async defer
         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBFlR8ZauuCjqIZMIgeH2JDPJweFtSUG4w&callback=initMap">
     </script>
-    <script src="js/diaporama.js"></script>
-    <script src="js/canvas.js"></script>
-    <script src="js/reservation.js"></script>
-    <script src="js/booking.js"></script>
 
 </body>
 
