--- a/index.htm
+++ b/index.htm
@@ -22,6 +22,7 @@
     </header>
     <div id="container">
         <section id="slider" class="border">
+            <div id="slider_close"><i class="fas fa-times"></i></div>
             <div id="slider_diapo">
                 <div id="slider_img"></div>
                 <div id="slider_txt"></div>
@@ -79,7 +80,7 @@
     </script>
     <script src="js/ajax.js"></script>
     <script src="js/config.js"></script>
-    <script src="js/displaymenu.js"></script>
+    <!-- <script src="js/displaymenu.js"></script> -->
     <script src="js/diaporama.js"></script>
     <script src="js/canvas.js"></script>
     <script src="js/reservation.js"></script>
