--- a/index.htm
+++ b/index.htm
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" type="image/ico" href="img/logo_ico.png" />
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" type="text/css" href="css/style.css" />
+    <link rel="stylesheet" media="screen and (max-width: 414px)" href="css/mobile.css" />
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
         integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <title>VeloCity</title>
