--- a/index.htm
+++ b/index.htm
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
@@ -17,7 +17,7 @@
     <header>
         <img src="img/logo.png" alt="logo" id="logo" />
         <nav id="menu">
-            <div id="menu_reservation"><a>Réservation</a></div>
+            <div id="menu_reservation"><a href="#map">Réservation</a></div>
             <div id="menu_aide"><a>Aide</a></div>
         </nav>
     </header>
