--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
         <img src="img/logo.png" alt="logo" id="logo" />
         <nav id="menu">
             <div id="menu_reservation"><a href="#map">Réservation</a></div>
-            <div id="menu_aide"><a  href="#slider">Aide</a></div>
+            <div id="menu_aide"><a  href="#container">Aide</a></div>
         </nav>
     </header>
     <div id="container">
