--- a/index.htm
+++ b/index.htm
@@ -15,7 +15,7 @@
 
 <body>
     <header>
-        <img src="img/logo.png" alt="logo" id="logo" />
+        <img src="img/logo.png" alt="logo de l'application" id="logo" />
         <nav id="menu">
             <div id="menu_reservation"><a href="#map">Réservation</a></div>
             <div id="menu_aide"><a  href="#container">Aide</a></div>
